--- a/phase2/src/View/Login.form
+++ b/phase2/src/View/Login.form
@@ -61,12 +61,7 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <model>
-                <item value="Applicant"/>
-                <item value="Human Resources"/>
-                <item value="Interviewer"/>
-                <item value="Referer"/>
-              </model>
+              <model/>
             </properties>
           </component>
           <component id="71582" class="javax.swing.JLabel">
