--- a/phase2/src/View/ApplicantForm.form
+++ b/phase2/src/View/ApplicantForm.form
@@ -62,26 +62,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="12b0" class="javax.swing.JTextArea" binding="openAppsTextArea">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties>
-              <editable value="false"/>
-              <lineWrap value="true"/>
-              <wrapStyleWord value="false"/>
-            </properties>
-          </component>
-          <component id="6e220" class="javax.swing.JTextArea" binding="closedAppsTextArea">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
           <component id="1b53d" class="javax.swing.JLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -98,6 +78,32 @@
               <text value="Closed Applications"/>
             </properties>
           </component>
+          <scrollpane id="f2004" binding="openAppScroll">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="6e9f0" class="javax.swing.JTextArea" binding="openAppsTextArea">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
+          <scrollpane id="2d1f8" binding="closedAppScroll">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="a64d1" class="javax.swing.JTextArea" binding="closedAppsTextArea">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
       <component id="e9209" class="javax.swing.JLabel" binding="errorLabel">
