--- a/phase2/src/View/HRApplicantOptions.form
+++ b/phase2/src/View/HRApplicantOptions.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="672" height="297"/>
+      <xy x="48" y="54" width="717" height="297"/>
     </constraints>
     <properties/>
     <border type="none" title="HR+Firm Applicant Options" title-justification="2" title-position="2"/>
@@ -98,17 +98,17 @@
               <text value="  "/>
             </properties>
           </component>
-          <component id="2cdc6" class="javax.swing.JLabel" binding="applicationLabel">
-            <constraints>
-              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="   "/>
-            </properties>
-          </component>
           <component id="ef4a7" class="javax.swing.JSeparator">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="b152b" class="javax.swing.JTextArea" binding="applicationLabel">
+            <constraints>
+              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
             </constraints>
             <properties/>
           </component>
