--- a/phase2/src/View/MessageBox.form
+++ b/phase2/src/View/MessageBox.form
@@ -49,13 +49,13 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="64a9f" class="javax.swing.JLabel" binding="mainText">
+          <component id="7bf6a" class="javax.swing.JTextArea" binding="mainText">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
             </constraints>
-            <properties>
-              <text value="Label"/>
-            </properties>
+            <properties/>
           </component>
         </children>
       </grid>
