Fixed ApplicantApplicationForm to reset Application list after withdrawing. Fixed InterviewerForm to show application strings

--- a/phase2/src/View/InterviewerForm.form
+++ b/phase2/src/View/InterviewerForm.form
@@ -16,20 +16,19 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="875fa" class="javax.swing.JTextArea" binding="applicationText">
+          <scrollpane id="69904" binding="appScroll">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties>
-              <background color="-1"/>
-              <editable value="false"/>
-              <enabled value="true"/>
-              <lineWrap value="false"/>
-              <rows value="20"/>
-            </properties>
-          </component>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="79c18" class="javax.swing.JTextArea" binding="applicationText">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
       <grid id="9538f" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
